[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["Triumph1 <seungwon.jeong@wesang.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.105.0"
uvicorn = "^0.24.0.post1"
requests = "^2.31.0"
gunicorn = "^21.2.0"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
